apps/recipe/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: mealie
    app.kubernetes.io/part-of: mealie
    app.kubernetes.io/version: 0.5.6
  name: mealie
  namespace: recipe
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: mealie
      app.kubernetes.io/part-of: mealie
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
        app.kubernetes.io/name: mealie
        app.kubernetes.io/part-of: mealie
        app.kubernetes.io/version: 0.5.6
    spec:
      containers:
      - env:
        - name: DB_TYPE
          value: sqlite
        image: hkotel/mealie:v0.5.6
        imagePullPolicy: IfNotPresent
        name: mealie
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/debug/version
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 10
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 54m
            memory: 150Mi
        volumeMounts:
        - mountPath: /app/data
          name: appdata
      restartPolicy: Always
      serviceAccountName: mealie
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: data
